@@ -1843,8 +1843,6 @@ DFhackCExport command_result plugin_onupdate (color_ostream &out)
     if(!Maps::IsValid())
         return CR_OK;
 
-    static decltype(world->frame_counter) last_frame_count = 0;
-
     bool is_paused = DFHack::World::ReadPauseState();
     if (is_paused)
     {
@@ -1855,10 +1853,8 @@ DFhackCExport command_result plugin_onupdate (color_ostream &out)
     }
     else
     {
-        if (world->frame_counter - last_frame_count < DELTA_TICKS)
+        if (world->frame_counter % DELTA_TICKS != 0)
             return CR_OK;
-
-        last_frame_count = world->frame_counter;
     }
 
     update_dwarf_stats(is_paused);
