@@ -37,6 +37,11 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ================================================================================
 # Future
 
+## Fixes
+- `autochop`, `autodump`, `autogems`, `automelt`, `autotrade`, `buildingplan`, `dwarfmonitor`, `fix-unit-occupancy`, `fortplan`, `stockflow`: fix issues with periodic tasks not working for some time after save/load cycles
+- `buildingplan`, `fortplan`: stop running before a world has fully loaded
+- `autogems`: stop running repeatedly when paused
+
 ## Misc Improvements
 - `mousequery`:
     - migrated several features from TWBT's fork
